# nim-book

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
art/: cover.ai
src/: build-html.py  build-sample-image.py  build-state-images.py
src/lib/: nim.py  nimgraph.py  nimgraph_magnets.py  nimgraph_stacks.py  nimjson.py
src/nim/: nim-json.py  nim.json
